tree-sitter-pollen/test/corpus/09_nested_tags.txt
===========================================
Tag inside tag
===========================================
◊h2{◊jpns{勇次}}
---
(source_file
  (tag_expression
    (tag_name)
    (tag_body
      (tag_expression
        (tag_name)
        (tag_body
          (body_text))))))

===========================================
Multiple children in body
===========================================
◊ul{
  ◊li{first}
  ◊li{second}
}
---
(source_file
  (tag_expression
    (tag_name)
    (tag_body
      (body_text)
      (tag_expression
        (tag_name)
        (tag_body
          (body_text)))
      (body_text)
      (tag_expression
        (tag_name)
        (tag_body
          (body_text)))
      (body_text))))

===========================================
Ruby annotation
===========================================
◊ruby{渕◊rt{yuān}}
---
(source_file
  (tag_expression
    (tag_name)
    (tag_body
      (body_text)
      (tag_expression
        (tag_name)
        (tag_body
          (body_text))))))

===========================================
meta block
===========================================
◊meta{
  ◊title{In-depth Review}
  ◊subtitle{foundation}
}
---
(source_file
  (tag_expression
    (tag_name)
    (tag_body
      (body_text)
      (tag_expression
        (tag_name)
        (tag_body
          (body_text)))
      (body_text)
      (tag_expression
        (tag_name)
        (tag_body
          (body_text)))
      (body_text))))
